--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* 
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -65,4 +66,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
